--- a/config/dev.env
+++ b/config/dev.env
@@ -1,4 +1,5 @@
 PORT=5000
 
 JWT_SECRET = thisismynewcourse
-MONGO_DB = 'mongodb://127.0.0.1:27017/task-manager-api'
+SENDGRID_API_KEY = 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
+MONGO_DB = mongodb://127.0.0.1:27017/task-manager-api
