--- a/config/dev.env
+++ b/config/dev.env
@@ -1,5 +1,5 @@
 PORT=5000
 
 JWT_SECRET = thisismynewcourse
-SENDGRID_API_KEY = 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
+SENDGRID_API_KEY = 223
 MONGO_DB = mongodb://127.0.0.1:27017/task-manager-api
