--- a/config/dev.env
+++ b/config/dev.env
@@ -1,5 +1,5 @@
 PORT=5000
 
 JWT_SECRET = thisismynewcourse
-SENDGRID_API_KEY = 223
+SENDGRID_API_KEY = ***
 MONGO_DB = mongodb://127.0.0.1:27017/task-manager-api
