--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "env-cmd": "^10.0.1",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
